Name:		HEPUtil
Version:	0.1.3.999
Synopsis:	Useful functions for HEP
Description: 	Collection of useful functions for High Energy Physics project   
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, 
                iteratee>0.4, iteratee-util, mtl >2, LHCOAnalysis>=0.4.4,  
                ghc > 7.4, 
                ghc-paths, 
                filepath, 
                split, 
                parsec, 
                transformers > 0.2.2, template-haskell, 
                hmatrix >= 0.12.0.2
-- hmatrixIW,
-- , transformers
-- hmatrix > 0.11,
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 HEP.Util.Functions
		 HEP.Util.Combinatorics
		 HEP.Util.Printf
		 HEP.Util.IDState
                 HEP.Util.Coroutine
                 HEP.Util.GHC.Plugins
                 HEP.Util.Parsing
                 HEP.Util.Count
                 HEP.Util.File
                 HEP.Util.QQ.Verbatim