Name:		HEPUtil
Version:	0.999
Synopsis:	Useful functions for HEP
Description: 	Collection of useful functions for High Energy Physics project   
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Depends:	base>4, 
                -- 
                either, 
                filepath,
                ghc, 
                ghc-paths, 
                hmatrix >= 0.12,
                LHCOAnalysis-type,  
                mtl >2, 
                parsec, 
                split, 
                template-haskell, 
                transformers > 0.2.2 
 
Build-Type: 	Simple

hs-source-dirs: src
ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
ghc-prof-options: -caf-all -auto-all

Exposed-Modules: 
		 HEP.Util.Combinatorics
                 HEP.Util.Coroutine
                 HEP.Util.Count
                 HEP.Util.Either
                 HEP.Util.File
                 HEP.Util.Formatter.Fortran
		 HEP.Util.Functions
                 HEP.Util.GHC.Plugins
		 HEP.Util.Printf
                 HEP.Util.Parsing
                 HEP.Util.QQ.Verbatim
